Added the indx page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-<title>Manisha-patel</title>
+<title>Home</title>
 </head>
 <body>
-<h1>Hello Everyone</h1>
+<h2>Helloo Girl...</h2>
 </body>
 </html>
